--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@ nav {
     padding: 10px;
     margin: 0;
     background-color: black;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
     justify-content: center;
+    
     
 }
 
@@ -33,15 +37,39 @@ h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.wrap {
+form {
+    width: 400px;
     display: flex;
     justify-content: center;
+}
+
+input[type=text] {
+    width: 100%;
+}
+
+input[type=text], input[type=submit] {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    
+    padding: 7px;
+    border: 5px solid black;
+    margin: 5px;
+
+
+}
+
+
+
+
+.wrap {
+    
     width: 1000px;
     margin: auto;
     margin-top: 100px;
 }
 
 .card {
+    position: relative;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     transition: 0.4s;
     width: 300px;
