--- a/style.css
+++ b/style.css
@@ -62,14 +62,14 @@ input[type=text], input[type=submit] {
 
 
 .wrap {
-    
+    display: flex;
+    justify-content: center;
     width: 1000px;
     margin: auto;
     margin-top: 100px;
 }
 
 .card {
-    position: relative;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     transition: 0.4s;
     width: 300px;
