--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url("marvel-custom.png");
+    background-image: url("background1.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -33,6 +33,7 @@ nav {
 }
 
 h1 {
+    margin: 0;
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
@@ -58,9 +59,27 @@ input[type=text], input[type=submit] {
 
 }
 
+.filler {
+    margin: 20px 0px 0px 0px;
 
+}
 
+.carousel-inner{   
+    width:100%;
+    /* max-height: 400px !important; */
+  }
 
+.carousel-inner > .item :active > img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
 
 
 .card {
@@ -72,7 +91,11 @@ input[type=text], input[type=submit] {
     margin: 10px;
     background-color: white;
     border: 6px solid black;
-    width: 50%;
+    display: flex;
+    justify-content: center;
+    
+    
+    
     
 
 }
@@ -102,6 +125,6 @@ p, .character-description {
 
 @media only screen and (max-width: 767px) {
     body {
-      background-image: url("marvel-custom.png");
+      background-image: url("background1.png");
     }
   }
