--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ input[type=text], input[type=submit] {
     margin: 10px;
     background-color: white;
     border: 6px solid black;
-    display: flex;
-    justify-content: center;
+    margin: 0;
+    
     
     
     
@@ -100,9 +100,9 @@ input[type=text], input[type=submit] {
 
 }
 
-.character-image {
+/* .character-image {
     width: 288px;
-}
+} */
 
 h5, .character-name {
     font-size: 24px;
