--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ input[type=text], input[type=submit] {
     margin: 10px;
     background-color: white;
     border: 6px solid black;
-    margin: 0;
+    padding: 10px;
     
     
     
@@ -114,6 +114,8 @@ p, .character-description {
     font-family: 'Lato', sans-serif;
     padding: 2px;
 }
+
+
 
 
 
