--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ input[type=text], input[type=submit] {
 .search-bar {
     display: flex;
     justify-content: center;
+    align-items: column;
     padding: 20px;
 }
 
@@ -99,6 +100,7 @@ input[type=text], input[type=submit] {
     
 
 }
+
 
 /* .character-image {
     width: 288px;
