--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ input[type=text], input[type=submit] {
 
 .filler {
     margin: 20px 0px 0px 0px;
+    
 
 }
 
@@ -78,7 +79,7 @@ input[type=text], input[type=submit] {
 .search-bar {
     display: flex;
     justify-content: center;
-    align-items: column;
+    
     padding: 20px;
 }
 
@@ -88,18 +89,28 @@ input[type=text], input[type=submit] {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     transition: 0.4s;
     text-align: center;
-    float: left;
     margin: 10px;
     background-color: white;
     border: 6px solid black;
     padding: 10px;
+    height: 300px;
+    display: none;
+    width: 100vw;
     
-    
-    
-    
-    
-
 }
+
+img {
+    float: left;
+    vertical-align: middle;
+    border-style: none;
+    height: 100%;
+    object-fit: contain;
+    
+}
+
+/* .card-body {
+    height: 100%;
+} */
 
 
 /* .character-image {
@@ -110,6 +121,7 @@ h5, .character-name {
     font-size: 24px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     padding: 2px;
+    z-index: 1;
 }
 
 p, .character-description {
@@ -127,8 +139,8 @@ p, .character-description {
 
 
 
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) {
     body {
       background-image: url("background1.png");
     }
-  }
+  } */
