--- a/style.css
+++ b/style.css
@@ -92,17 +92,18 @@ input[type=text], input[type=submit] {
     margin: 10px;
     background-color: white;
     border: 6px solid black;
-    padding: 10px;
+    padding: 10px 10px 30px 10px;
     height: 300px;
     display: none;
-    width: 100vw;
+    width: 10vw;
+    
     
 }
 
 img {
     float: left;
     vertical-align: middle;
-    border-style: none;
+    border: 6px solid black;
     height: 100%;
     object-fit: contain;
     
