--- a/style.css
+++ b/style.css
@@ -130,13 +130,13 @@ p, .character-description {
     padding: 2px;
 }
 
-.comic-section {
+/* .comic-section {
     background-image: url("los-vengadores-vinilo-decorativo.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-}
+} */
 
 
 
